--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,8 @@ a {
   top: 0px;
   right: 0px;
   z-index: 100;
+  width: 30%;
+  height: 100%;
 }
 
 .navbar {
@@ -55,6 +57,12 @@ a {
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.selected>a {
   color: #160426;
+}
+
+button {
+  background-color: #8182e2;
+  font-size: 1.5em;
+  color: rgba(255, 255, 255, 1);
 }
 
 h1 {
@@ -81,7 +89,7 @@ h2 {
   background-color: rgba(245,245,245,0.3);	
   display: block;
   padding: 2em;
-  padding-right: 15%;
+  padding-right: 20%;
   color: #F5F5F5;
   font-family: textFont;
   font-size: 2em;
@@ -91,14 +99,36 @@ h2 {
   position: relative;
 }
 
+.indent {
+  margin-left: 5%;
+}
+
+.resume-chunk {
+  padding-bottom: 30px;
+  font-size: 1em;
+}
+
+.resume-label {
+  color: #d46a31;
+}
+
+i {
+  color: #160426;
+}
+
+.float-right {
+  float: right;
+}
+
 object {
   width: 30em;
   height: 38.08em;
   z-index: 0;
 }
 
-.project-div {
+.project-div, .resume-download {
   padding: 0.5em;
+  padding-right: 20%;
 }
 
 .purple-text {
@@ -106,7 +136,7 @@ object {
 }
 
 .screenshot {
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
