--- a/views/projects.jade
+++ b/views/projects.jade
@@ -21,6 +21,6 @@ block content
         | Lead front-end developer
       p
         span(class="purple-text") Technologies Used: 
-        | We used Germini for the back-end: TechEmpower's in-house Java-based framework. 
+        | We used Germini for the back-end; TechEmpower's in-house Java-based framework. 
         For the front-end we used Mustache templating, jQuery, Ajax, and Less.
       img(src="/images/lizzieDriver.png" alt="Lizzie Driver Screenshot" class="screenshot")
