Found a missing word

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -22,5 +22,5 @@ block content
       p
         span(class="purple-text") Technologies Used: 
         | We used Germini for the back-end; TechEmpower's in-house Java-based framework. 
-        For the front-end we used Mustache templating, jQuery, Ajax, and Less.
+        | For the front-end we used Mustache templating, jQuery, Ajax, and Less.
       img(src="/images/lizzieDriver.png" alt="Lizzie Driver Screenshot" class="screenshot")
