--- a/views/projects.jade
+++ b/views/projects.jade
@@ -13,14 +13,20 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
-      h2 
-        a(href="http://www.lizziedriver.com" target="_blank" class="outside-link") Lizzie Driver 
-        | (Built by TechEmpower Inc.)
+      h2 Stranger Love 
       p
         span(class="purple-text") Contribution: 
-        | Lead front-end developer
+        | Personal Project - developer
       p
         span(class="purple-text") Technologies Used: 
-        | We used Germini for the back-end; TechEmpower's in-house Java-based framework. 
-        | For the front-end we used Mustache templating, jQuery, Ajax, and Less.
-      img(src="/images/lizzieDriver.png" alt="Lizzie Driver Screenshot" class="screenshot")
+        | I'm using PostgreSQL and Django for the back-end and will attempt to use Angular for the front-end.
+      p The purpose of this project is for me to learn new technologies that I have an interest in. I also wanted to create a project that would have a positive impact on the world.
+      p The purpose of StrangerLove is to get individuals together to support each other with extra-curriculars that might require more than a handful of people
+     p This project was inspired by 
+       a(href="https://www.youtube.com/watch?v=5_v7QrIW0zY") this video.
+     | I thought, "How did they get that many people?" and then wondered if I could connect people who might not have that many friends, but still want to do something nice for someone else.
+    p
+    p 
+      span(class="purple-text") Examples:
+      | Someone has stage-fright and needs to practice, so a group of people come and let them rehearse while the audience faces away from the performer.
+      | There's a grave that never gets any flowers, but their birthdate is coming up. Recruit a bunch of people to bring flowers.
