--- a/views/projects.jade
+++ b/views/projects.jade
@@ -13,7 +13,7 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
-      h2 Stranger Love 
+      h2(class="project-title") Stranger Love 
       p
         span(class="purple-text") Contribution: 
         | Personal Project - developer
