Added LMU stuff

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,7 @@ block content
   .panel.panel-default.content
     div
     .panel-body
-    p Hi my name is Haley and I'm in love with front-end web development. I created this page to keep a portfolio of my projects and r&#233;sum&#233;.
-    br
-    p I graduated college in Fall of 2013 with a degree in computer science and am currently living in Austin, Texas working for Hewlett-Packard as a software developer.
-    br
-    p I'm always open to constructive criticism, so if you have any ideas on how I can improve my code or suggestions on topics to learn, please pass them along.
-    br
-    p As for now, welcome!
+    p
+      a(href="/lmuHome") CMSI 185
+    p
+      a(href="/aboutMe") Other
