Working on syllabus and first lecture

--- a/views/syllabus.jade
+++ b/views/syllabus.jade
@@ -8,8 +8,10 @@ block content
     .panel-body
       h2 CMSI 185
       h2 Computer Programming
+      p TR 9:40 - 11:10am &#8226 Seaver 207
       p TR 11:20am - 12:50pm &#8226 Seaver 200
       p Fall 2015 &#8226 Haley Young &#8226 haleyyoung.info@gmail.com
+      p Office Hours - Wednesdays and Thursdays 5:30pm - 7:30pm
 
   div
   .panel.panel-default.content.project-div
@@ -78,48 +80,52 @@ block content
             | Primitive types, variables
         tr
           td Sep 7 - 11
-          td Expressions, statements
+          td Expressions
         tr
           td Sep 14 - 18
+          td Statements
+        tr
+          td Sep 21 - 25
           td Loops
             br
             | Arrays
         tr
-          td Sep 21 - 25
+          td Sep 28 - Oct 2
           td Objects
         tr
-          td Sep 28 - Oct 2
-          td Functions, iteration
-        tr
           td Oct 5 - 9
-          td Functions, recursion
+          td Objects
         tr
           td Oct 12 - 16
-          td Unit testing
+          td Functions, iteration
         tr
           td Oct 19 - 23
-          td Midterm
+          td Midterm prep
+            br
+            | Midterm
         tr
           td Oct 26 - 30
+          td Functions, recursion
+            br
+            | Unit testing
+        tr
+          td Nov 2 - 6
           td HTML, CSS, separation of concerns
             br
             | jQuery, clean code
         tr
-          td Nov 2 - 6
-          td Object oriented programming
-            br
-            | Event-driven programming
-        tr
           td Nov 9 - 13
-          td Unit Testing
-            br
-            | Performance
+          td Object-oriented programming
         tr
           td Nov 16 - 20
+          td Prototypes
+          td Event-driven programming
         tr
           td Nov 23 - 27
+          td Unit Testing and performance
         tr
           td Nov 30 - Dec 4
+          td Advanced JavaScript
         tr
           td Dec 7 - 11
           td Exam prep
