--- a/views/syllabus.jade
+++ b/views/syllabus.jade
@@ -10,8 +10,8 @@ block content
       h2 Computer Programming
       p TR 9:40 - 11:10am &#8226 Seaver 207
       p TR 11:20am - 12:50pm &#8226 Seaver 200
-      p Fall 2015 &#8226 Haley Young &#8226 haleyyoung.info@gmail.com
-      p Office Hours - Wednesdays and Thursdays 5:30pm - 7:30pm
+      p Fall 2015 &#8226 Haley Young &#8226 hyoung4@lion.lmu.edu
+      p Office Hours - Wednesdays and Thursdays 5:30pm - 7:30pm and by appointment
 
   div
   .panel.panel-default.content.project-div
@@ -23,7 +23,20 @@ block content
         | students with coding experience will be encouraged to adopt good clean coding practices in this course.
       p This is a 3 unit course, so students will be expected to spend at least 6 hours per week outside of class working 
         | on course content.
+      p All course content will be posted on my website: haleyyoung.info/lmuHome
       h2(class="project-title") Learning Outcomes
+
+      p By the end of this course, students will be able to:
+        br
+        | &#8226 read and comprehend someone else's basic code and explain it to another person
+        br
+        | &#8226 construct and implement algorithms to solve simple problems
+        br
+        | &#8226 debug code effectively and efficiently
+        br
+        | &#8226 create clean, reusable, tested code
+        br
+        | &#8226 understand the basic design process involved in software development
 
       p I would like this class to be a discussion-type experience. If you have a question, immediately ask. If you're 
         | not understanding the example I'm using, please ask for another, or for a different approach. Coming to class should 
@@ -43,28 +56,39 @@ block content
 
       h2(class="project-title") Participation/Attendance
       p I will monitor much of your understanding of the content of this course based on your 
-        | participation in class. So come to class, be active and engaged.
+        | participation in class. So come to class; be active and engaged.
 
       h2(class="project-title") Exams
-      p Exams will be closed-book and hand-written. The midterm will be on October 22nd and the final will be on December 15th at 11:00am.
+      p Exams will be closed-book and hand-written. The midterm will be on October 22nd and the final will be on December 17th at 8am (9:40 class) and December 15th at 11:00am (11:20 class).
 
       h2(class="project-title") Grading
       p Participation 20%
-      p Assignments 40%
-      p Midterm 15%
-      p Final 25%
+        br
+        | Assignments 40%
+        br
+        | Midterm 15%
+        br
+        | Final 25%
 
       br
       p The grading scheme will be as follows:
       p 100% - 93% A
-      p 92% - 90% A-
-      p 89% - 88% B+
-      p 87% - 83% B
-      p 82% - 80% B-
-      p 79% - 78% C+
-      p 77% - 73 C%
-      p 72% - 70% C-
-      p ...and so on
+        br
+        | 92% - 90% A-
+        br
+        | 89% - 88% B+
+        br
+        | 87% - 83% B
+        br
+        | 82% - 80% B-
+        br        
+        | 79% - 78% C+
+        br
+        | 77% - 73 C%
+        br
+        | 72% - 70% C-
+        br
+        | ...and so on
 
 
   div
@@ -119,7 +143,8 @@ block content
         tr
           td Nov 16 - 20
           td Prototypes
-          td Event-driven programming
+            br
+            | Event-driven programming
         tr
           td Nov 23 - 27
           td Unit Testing and performance
