Restructured the cmsi section of the site

--- a/views/cmsi185/notes/intro.jade
+++ b/views/cmsi185/notes/intro.jade
@@ -1,7 +1,7 @@
-extends ../lmuLayout
+extends ../../lmuLayout
 
 block content
   h1= title
   p
-    img(src= "../images/computerScienceTimeline.jpg" alt="computer science timeline")
+    img(src= "../../images/computerScienceTimeline.jpg" alt="computer science timeline")
     a(href="http://www.worldsciencefestival.com/2013/12/a_history_of_computer_science/") Timeline
