--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
 
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    img(src= "../images/splatterTopRight.png" id="top-right-image" alt="paint splash")
+    img(src= "/images/splatterTopRight.png" id="top-right-image" alt="paint splash")
     nav(class="navbar navbar-default navbar-fixed-top" role="navigation")
       div(class="container")
         ul(class="nav navbar-nav")
