Working through routing issue

--- a/views/cmsi185/notes/intro.jade
+++ b/views/cmsi185/notes/intro.jade
@@ -2,6 +2,10 @@ extends ../../lmuLayout
 
 block content
   h1= title
-  p
-    img(src= "../../images/computerScienceTimeline.jpg" alt="computer science timeline")
-    a(href="http://www.worldsciencefestival.com/2013/12/a_history_of_computer_science/") Timeline
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      p
+        img(src= "../../images/computerScienceTimeline.jpg" alt="computer science timeline")
+        a(href="http://www.worldsciencefestival.com/2013/12/a_history_of_computer_science/") Timeline
