Completed first day's notes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -144,7 +144,7 @@ object {
   color: #160426;
 }
 
-.screenshot {
+.screenshot, .notes-image {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
