--- a/views/cmsi185/notes/intro.jade
+++ b/views/cmsi185/notes/intro.jade
@@ -7,5 +7,91 @@ block content
     div
     .panel-body
       p
-        img(src= "../../images/computerScienceTimeline.jpg" alt="computer science timeline")
-        a(href="http://www.worldsciencefestival.com/2013/12/a_history_of_computer_science/") Timeline
+        img(src= "../../images/computerScienceTimeline.jpg" alt="computer science timeline" class="notes-image")
+      br
+      p
+        a(src="https://www.youtube.com/watch?v=1MPJZ6M52dI" target="_blank") The first computer mouse
+      br
+      p Windows 1.0
+        img(src= "../../images/windows.gif" alt="windows 1.0" class="notes-image")
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") Analog Computers
+      p &#8226 Had initial values and a limitation on the range of values
+      p &#8226 Use mechanical, electric or hydraulic quantities
+        br
+        span(class="indent") - Digital computers compute on symbolic quantities
+      p &#8226 Processes are not absolutely accurate and therefore cannot be absolutely repeated
+      p &#8226 Analog is fast, digital is versatile (until the 1980s, then digital computers caught up in speed)
+
+      h2(class="project-title") Analytical Engines
+      p &#8226 Used base-10
+      p &#8226 Had punch cards which contained programs and data
+      p &#8226 Output was a printer, curve plotter and a bell
+      p &#8226 Analytical engines could store data(!)
+        br
+        span(class="indent") - 1000 numbers of 40 digits each
+      p &#8226 Analytical engines could perform addition, subtraction, multiplication, division and square roots
+      p &#8226 Programs could implement loops and conditional branching
+      p &#8226 Programs were described as a list of states during execution
+      p &#8226 This machine was Turing Complete
+
+
+      h2(class="project-title") Ada Lovelace
+      p &#8226 The first computer programmer
+      p &#8226 Programmed Babbage's computer to calculate Bernoulli's numbers
+
+      h2(class="project-title") What's an algorithm?
+      p &#8226 "A process or set of rules to be followed in calculations or other problem solving operations" ~Dictionary.com
+
+      h2(class="project-title") Turing Machines
+      p &#8226 Alan Turing called his machine an "automatic machine"
+      p &#8226 A Turing Machine can simulate the logic of any computer algorithm (some problems are computationally unsolvable)
+      p &#8226 Consists of a tape, head, rules and a state register
+        br
+        span(class="indent") The tape is of unlimited length in one or both directions
+
+      h2(class="project-title") Z3 - Digital Computer
+      p &#8226 Can store 64 22-bit words of data
+      p &#8226 Can do floating-point arithmetic
+      p &#8226 Uses the binary number system
+      p &#8226 This machine is a complete Turing Machine
+
+      h2(class="project-title") MS-DOS
+      p &#8226 A command-line operating system with no graphical interface
+
+      h2(class="project-title") Windows 1.0
+      p &#8226 A graphical operating system
+
+      h2(class="project-title") What is computer science?
+      p &#8226 "The scientific and practical approach to computation and its applications" ~Wikipedia
+
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2 Sources:
+      p
+        a(href="http://www.worldsciencefestival.com/2013/12/a_history_of_computer_science/" target="_blank") Timeline
+      p
+        a(href="https://en.wikipedia.org/wiki/Analog_computer") Analog Computers
+      p
+        a(href="https://en.wikipedia.org/wiki/Analytical_Engine" target="_blank") Analytical Engines
+      p
+        a(href="https://en.wikipedia.org/wiki/Turing_completeness" target="_blank") Turing Completeness
+      p
+        a(href="https://en.wikipedia.org/wiki/Turing_machine" target="_blank") Turing Machines
+      p
+        a(href="http://www.howtogeek.com/188980/pcs-before-windows-what-using-ms-dos-was-actually-like/" target="_blank") MS-DOS
+      p
+        a(href="http://brianoverland.com/2013/08/17/what-the-film-jobs-got-wrong/" target="_blank") Windows 1.0 image
+      p
+        a(href="http://www.petaflop.info/" target="_blank") Petaflops
+      p
+        a(href="https://en.wikipedia.org/wiki/Qubit" target="_blank") Qubits
+      p
+        a(href="https://en.wikipedia.org/wiki/Computer_science" target="_blank") Computer Science
