--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -8,3 +8,7 @@ block content
     .panel-body
       p
         a(href="/cmsi185/courseNotes/intro") Introduction
+      p
+        a(href="/cmsi185/courseNotes/compSciJSIntro") What is computer science? and an Introduction to JavaScript
+      p
+        a(href="/cmsi185/courseNotes/dataTypesAndVariables") Data Types and Variables
