--- a/views/cmsi185/homework/homework1.jade
+++ b/views/cmsi185/homework/homework1.jade
@@ -9,8 +9,11 @@ block content
     div
     .panel-body
       h2(class="project-title") Instructions
-      p Type up your solutions. For questions involving code, save your code in a JSFIddle and 
+      p Type up your solutions. For questions involving code, save your code in a JSFiddle and 
       | email me the JSFiddle URL as well as put the code in your hard copy.
+      br
+      br
+      p Due September 8th
 
   div
   .panel.panel-default.content.project-div
