Updated mistakes in notes/homework

--- a/views/cmsi185/homework/homework1.jade
+++ b/views/cmsi185/homework/homework1.jade
@@ -20,7 +20,7 @@ block content
     div
     .panel-body
       p 1. Write a paragraph explaining your understanding of the difference between JavaScript and Java. 
-        | Site your sources.
+        | Cite your sources.
       br
 
       p 2. Write a program which:
