--- a/views/cmsi185/notes/dataTypesAndVariables.jade
+++ b/views/cmsi185/notes/dataTypesAndVariables.jade
@@ -57,7 +57,7 @@ block content
       p(class="indent") "pen" or 'pen'
       br
       p If you try to coerce null to a string, JavaScript will return "null"
-      p Some functions for strings: length, toUpper, toLower, parseInt, parseFloat
+      p Some functions for strings: length, toUpperCase, toLowerCase, parseInt, parseFloat
 
   div
   .panel.panel-default.content.project-div
