updating syllabus schedule

--- a/views/cmsi185/syllabus.jade
+++ b/views/cmsi185/syllabus.jade
@@ -104,10 +104,10 @@ block content
             | Primitive types, variables
         tr
           td Sep 7 - 11
-          td Expressions
+          td Statements and Expressions
         tr
           td Sep 14 - 18
-          td Statements
+          td Expressions
         tr
           td Sep 21 - 25
           td Loops
