--- a/views/cmsi185/notes/compSciJSIntro.jade
+++ b/views/cmsi185/notes/compSciJSIntro.jade
@@ -54,5 +54,5 @@ block content
         | or 
         a(href="https://jsfiddle.net/" target="_blank") jsFiddle
       p(class="indent") &#8226 in a 
-        a(href="http://www.squarefree.com/shell/" target="_blank") shell
+        a(href="http://www.squarefree.com/shell/shell.html") shell
       p(class="indent") &#8226 or as a script
