--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -12,3 +12,7 @@ block content
         a(href="/cmsi185/courseNotes/compSciJSIntro") What is computer science? and an Introduction to JavaScript
       p
         a(href="/cmsi185/courseNotes/dataTypesAndVariables") Data Types and Variables
+      p
+        a(href="/cmsi185/courseNotes/statements") Statements
+      p
+        a(href="/cmsi185/courseNotes/expressions") Expressions
