--- a/views/cmsi185/homework.jade
+++ b/views/cmsi185/homework.jade
@@ -8,3 +8,5 @@ block content
     .panel-body
       p
         a(href="/cmsi185/homework/1") Homework 1
+      p
+        a(href="/cmsi185/homework/2") Homework 2
