--- a/views/cmsi185/homework/homework2.jade
+++ b/views/cmsi185/homework/homework2.jade
@@ -56,7 +56,7 @@ block content
       p 6. SHOW YOUR WORK! What does each of these expressions evaluate to?
       p(class="indent") a. 
         :markdown
-          `10 * 4.3 / Math.pow(2, (92 - 111)) > 7`
+          `10 * 4.3 / Math.pow((92 - 111), 2) > 7`
       p(class="indent") b. 
         :markdown
           `2 > 6 === true`
