--- a/views/cmsi185/notes/statements.jade
+++ b/views/cmsi185/notes/statements.jade
@@ -54,3 +54,16 @@ block content
               //code block  
           }
           ```
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") The Switch
+      p A switch statement takes in a variable and compares it to each case. It then runs the code in the 
+        | first case that's satisfied.
+      p(class="indent")
+        img(src="/images/switch.png")
+      br
+      p(class="indent") &#8226 If you don't include a break in each case, the interpreter will fall through
+        | to the next case without checking subsequent conditions.
