--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -16,3 +16,5 @@ block content
         a(href="/cmsi185/courseNotes/statements") Statements
       p
         a(href="/cmsi185/courseNotes/expressions") Expressions
+      p
+        a(href="/cmsi185/courseNotes/commentsAndCleanCode") Comments And Clean Code
