--- a/views/cmsi185/homework/homework2.jade
+++ b/views/cmsi185/homework/homework2.jade
@@ -22,7 +22,7 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
-      p 1. Write a program that asks a user their birth month and returns a holiday in that month. Do not use a bunch of if-statements. 
+      p 1. Write a program that asks a user their birth month and returns a holiday in that month. Do not use an if-statement. 
         | Make sure "January", "january", "JANUARY", "jAnUaRy", etc. are all acceptable inputs and are all handled under one case.
       br
 
