Adding ternary and switch notes

--- a/views/cmsi185/notes/commentsAndCleanCode.jade
+++ b/views/cmsi185/notes/commentsAndCleanCode.jade
@@ -23,3 +23,40 @@ block content
         img(src="/images/birthday.png")
         br
         a(href="https://jsfiddle.net/b35wc0jf/" target="_blank") Code
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") Refactoring
+      p(class="indent") Refactoring code is when we pull out repetitive parts of our code
+        | and use it once instead of multiple times over.
+      p(class="indent")
+        img(src="/images/iceCream.png")
+        br
+        a(href="https://jsfiddle.net/o446wbak/" target="_blank") Code
+      p(class="indent")
+        img(src="/images/circleMath.jpg")
+        br
+        a(href="https://jsfiddle.net/1kxmh5ub/" target="_blank") Code
+      p(class="indent")
+        img(src="/images/ifToTernary.png")
+        br
+        a(href="http://jsfiddle.net/jcxhmzr4/" target="_blank") Code
+      p(class="indent")
+        img(src="/images/if.png")
+        br
+        a(href="https://jsfiddle.net/p0knu26j/" target="_blank") Code
+      p(class="indent")
+        img(src="/images/ifToSwitch.png")
+        br
+        a(href="https://jsfiddle.net/towoga8e/" target="_blank") Code
+
+
+        
+
+
+
+
+
+
