Clarifications on homework

--- a/views/cmsi185/homework/homework2.jade
+++ b/views/cmsi185/homework/homework2.jade
@@ -26,7 +26,7 @@ block content
         | Make sure "January", "january", "JANUARY", "jAnUaRy", etc. are all acceptable inputs and are all handled under one case.
       br
 
-      p 2. Write a program that asks a user for the two shorter sides of a triangle and prints out the length of the third (and longest) side.
+      p 2. Write a program that asks a user for the two shorter sides of a right triangle and prints out the length of the third (and longest) side.
       br
 
       p 3. Remember those choose your own adventure books? Write a program that asks a user to choose between two choices - three consecutive 
@@ -48,9 +48,9 @@ block content
       br
 
       p 5.
-      p(class="indent") a. Write a program that returns a random whole number between 4 and 14. 
+      p(class="indent") a. Write a program that returns a random whole number between 4 and 14 (both bounds are inclusive). 
       p(class="indent") b. Then write a program that asks a user for two positive number bounds and returns a random whole number 
-        | between those two positive numbers.
+        | between those two positive numbers (both bounds are inclusive).
       br
 
       p 6. SHOW YOUR WORK! What does each of these expressions evaluate to?
