Adding office hours details

--- a/views/cmsi185/homework.jade
+++ b/views/cmsi185/homework.jade
@@ -3,6 +3,10 @@ extends ../lmuLayout
 block content
   h1= title
   div
+  .panel.panel-default.content.banner
+    p Office hours are held in Doolan 112 on Wednesdays and Thursdays 5:30 - 7:30pm
+    p There are also TAs in the lab (Doolan 112) willing to help. Check the schedule in the lab for times.
+  div
   .panel.panel-default.content.project-div
     div
     .panel-body
