--- a/views/cmsi185/syllabus.jade
+++ b/views/cmsi185/syllabus.jade
@@ -11,7 +11,7 @@ block content
       p TR 9:40 - 11:10am &#8226 Seaver 207
       p TR 11:20am - 12:50pm &#8226 Seaver 200
       p Fall 2015 &#8226 Haley Young &#8226 hyoung4@lion.lmu.edu
-      p Office Hours - Wednesdays and Thursdays 5:30pm - 7:30pm and by appointment
+      p Office Hours - Doolan 112 Wednesdays and Thursdays 5:30pm - 7:30pm and by appointment
 
   div
   .panel.panel-default.content.project-div
