--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,6 +143,11 @@ object {
   z-index: 0;
 }
 
+.banner {
+  background: #d46a31;
+  margin: 5% 0%;
+}
+
 .project-div, .resume-download {
   padding: 0.5em;
   padding-right: 20%;
