--- a/views/cmsi185/notes/dataTypesAndVariables.jade
+++ b/views/cmsi185/notes/dataTypesAndVariables.jade
@@ -74,6 +74,19 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
+      h2(class="project-title") Arrays
+      p An array is a collection of values. Each value is called an element.
+      p(class="indent") To declare an array, you just need square brackets
+      p(class="indent")
+        img(src="/images/arrays.png")
+      br
+      p We reference elements in arrays by their index; indexing starts at 0.
+      p Arrays in JavaScript are dynamic, so their size can increase and decrease
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
       h2(class="project-title") Comments
       p Single-line comments in JavaScript start with //
       p Multi-line comments in JavaScript start and end with /*, */ respectively
