--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -18,3 +18,5 @@ block content
         a(href="/cmsi185/courseNotes/expressions") Expressions
       p
         a(href="/cmsi185/courseNotes/commentsAndCleanCode") Comments And Clean Code
+      p
+        a(href="/cmsi185/courseNotes/loops") Loops
