--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -20,3 +20,5 @@ block content
         a(href="/cmsi185/courseNotes/commentsAndCleanCode") Comments And Clean Code
       p
         a(href="/cmsi185/courseNotes/loops") Loops
+      p
+        a(href="/cmsi185/courseNotes/arrays") Arrays
