--- a/views/cmsi185/notes/loopsAndArrays.jade
+++ b/views/cmsi185/notes/loopsAndArrays.jade
@@ -7,7 +7,7 @@ block content
     div
     .panel-body
       h2(class="project-title") Iteration
-      p Iteration is repeating a process. In terms of writing code, iteration is
+      p(class="indent") Iteration is repeating a process. In terms of writing code, iteration is
         | repeating a portion of code until we're satisfied with the state of our program.
       p JavaScript has four kinds of loops available for us to use:
       p(class="indent") &#8226 while, do/while, for, and for/in
@@ -40,10 +40,10 @@ block content
     div
     .panel-body
       h2(class="project-title") For Loops
-      p For-loops have a counter variable which is initialized and tested before each iteration of
+      p For-loops have a counter veriable which is initialize and tested before each iteration of
         | the loop.
       p(class="indent") &#8226 Initialize - This is a variable that we set to some value before beginning to run the loop
-      p(class="indent") &#8226 Test - This is a conditional just like in our if-statements. If the test is true, the loop runs
+      p(class="indemt") &#8226 Test - This is a conditional just like in our if-statements. If the test is true, the loop runs
       p(class="indent") &#8226 Increment - This updates the initialized variable so that we can run the loop an exact number of times
       p(class="indent")
         img(src="/images/forLoop.png")
