Adding object notes and homework 3

--- a/views/cmsi185/homework.jade
+++ b/views/cmsi185/homework.jade
@@ -14,3 +14,5 @@ block content
         a(href="/cmsi185/homework/1") Homework 1
       p
         a(href="/cmsi185/homework/2") Homework 2
+      p
+        a(href="/cmsi185/homework/3") Homework 3
