Adding for-in loops

--- a/views/cmsi185/notes/loopsAndArrays.jade
+++ b/views/cmsi185/notes/loopsAndArrays.jade
@@ -52,3 +52,12 @@ block content
         | are still required regardless of the statement being there.
       p(class="indent")
         img(src="/images/validForLoop.png")
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") For-In Loops
+      p For-In loops refernce an object and iterate over the properties of that object
+      p(class="indent")
+        img(src="/images/forInLoop.png")
