Added listings for hw4 and functions notes

--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -24,3 +24,5 @@ block content
         a(href="/cmsi185/courseNotes/arrays") Arrays
       p
         a(href="/cmsi185/courseNotes/objects") Objects
+      p
+        a(href="/cmsi185/courseNotes/functions") Functions
