--- a/views/cmsi185/homework.jade
+++ b/views/cmsi185/homework.jade
@@ -16,3 +16,5 @@ block content
         a(href="/cmsi185/homework/2") Homework 2
       p
         a(href="/cmsi185/homework/3") Homework 3
+      p
+        a(href="/cmsi185/homework/4") Homework 4
