--- a/views/cmsi185/homework/homework4.jade
+++ b/views/cmsi185/homework/homework4.jade
@@ -46,7 +46,8 @@ block content
       p 4. Write a program which asks a user for 6 sets of at least one number, then stores each of
         | those sets as an array in a larger array. Then, that array is passed to a function named 
         b findMax 
-        | which finds the maximum value within that array and returns the maximum value.
+        | which finds the maximum value within each inner array and returns the maximum value of 
+        | each inner array.
         | Then log each of those results in the console.
         p
           b You can assume the user will put in a list separated by ", " (comma space). That is 
