Fix hw 4 example

--- a/views/cmsi185/homework/homework4.jade
+++ b/views/cmsi185/homework/homework4.jade
@@ -34,7 +34,7 @@ block content
       p
         b You can assume the amount of money to be a simple float, no need to parse off a '$'. That is all you
           | can assume.
-      p(class="indent") ex: Putting in 10.0 will result in getting 12.0 back from totalWithTax
+      p(class="indent") ex: Putting in 10.0 and 0.2 will result in getting 12.0 back from totalWithTax
       br
 
       p 3. Write a function named 
