--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -26,3 +26,5 @@ block content
         a(href="/cmsi185/courseNotes/objects") Objects
       p
         a(href="/cmsi185/courseNotes/functions") Functions
+      p
+        a(href="/cmsi185/courseNotes/unitTesting") Unit Testing
