--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -28,3 +28,5 @@ block content
         a(href="/cmsi185/courseNotes/functions") Functions
       p
         a(href="/cmsi185/courseNotes/unitTesting") Unit Testing
+      p
+        a(href="/cmsi185/courseNotes/recursion") Recursion
