Updated recursion page, added web pages page

--- a/views/cmsi185/notes/recursion.jade
+++ b/views/cmsi185/notes/recursion.jade
@@ -14,3 +14,16 @@ block content
       p For example, a flower can have miniature flowers within it.
       br
       p In code, recursion can manifest itself by a function calling itself with new arguments.
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") Why use recursion?
+      p Recursion is useful when a smaller problem is easy to define and takes less time to solve.
+      br
+      p For example, if you have a binary tree, it is easier to search for data in half of the
+        | tree than searching the whole tree. If you can determine which half of the tree to solve,
+        | you can work on that sub-problem instead.
+      br
+      p Another classic examples is solving for the factorial of some number.
