--- a/views/cmsi185/courseNotes.jade
+++ b/views/cmsi185/courseNotes.jade
@@ -30,3 +30,5 @@ block content
         a(href="/cmsi185/courseNotes/unitTesting") Unit Testing
       p
         a(href="/cmsi185/courseNotes/recursion") Recursion
+      p
+        a(href="/cmsi185/courseNotes/webPages") Web Pages
